<resources>
    <string name="app_name">DoGoes</string>
    <string name="sign_in">Sign In</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="mail">Email</string>
    <string name="description_f">Enter your email to receive a password reset link.</string>
    <string name="description_i">Enter your credentials to access your account.</string>
    <string name="forgot">Forgot Password?</string>
    <string name="unnes">Logo Unnes</string>
    <string name="hello">Good day,</string>
    <string name="user">User</string>
    <string name="announcement">Announcement</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="change">Change</string>
    <string name="oldpw">Old Password</string>
    <string name="newpw">New Password</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="note">Note(Optional)</string>
    <string name="status_description">Status</string>
    <string name="history">History</string>
    <string name="load">Load Announcements</string>
</resources>