<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoUnnes"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/unnes_logo"
        android:contentDescription="@string/unnes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:text="@string/hello"
        android:textSize="16sp"
        android:fontFamily="@font/intertight_medium"
        app:layout_constraintStart_toEndOf="@id/logoUnnes"
        app:layout_constraintTop_toTopOf="@id/logoUnnes"
        android:layout_marginStart="16dp"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:text="@string/user"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toEndOf="@id/logoUnnes"
        app:layout_constraintTop_toBottomOf="@id/txtHello"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        tools:ignore="VisualLintOverlap" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/rounded_rec30"
        android:backgroundTint="@color/colorSecondary"
        app:itemBackground="@drawable/hover_tab"
        app:itemIconSize="36dp"
        app:itemIconTint="@color/colorBackground"
        app:itemPaddingBottom="12dp"
        app:itemPaddingTop="30dp"
        app:itemTextColor="@color/colorBackground"
        app:menu="@menu/button_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName" />

</androidx.constraintlayout.widget.ConstraintLayout>